顶部增加banner、更换轮播图图片以及一些显示错误

--- a/info/person2.html
+++ b/info/person2.html
@@ -11,148 +11,186 @@
 </head>
 
 <body>
-    <header>
-        <div class='logo'>
-            <a href="index.html">
-                <img src='../images/logo.png' alt="流通研究所" class='logo_img'> 
+<header>
+    <div class="header_banner">           <div class="banner_a">广州现代物流与电子商务发展研究基地</div>        </div>        <div class='logo'>
+        <a href="../index.html">
+            <img src='../images/logo.png' alt="流通研究所" class='logo_img'>
+        </a>
+    </div>
+    <ul class='nav_box'>
+        <li class='nav_item'>
+            <a href=''> 机构介绍
+                <i class='nav_icon'></i>
             </a>
-        </div>
-        <ul class='nav_box'>
-            <li class='nav_item'>
-                <a href=''> 机构介绍
-                    <i class='nav_icon'></i>
-                </a>
-                <div class='item_content'>
-                    <a href='./pages/ins1.html'>简介</a>
-                    <a href='./pages/ins2.html'>机构设置</a>
-                    <a href='./pages/ins3.html'>研究方向</a>
-                    <a href='./pages/ins4.html'>专家团队</a>
-                </div>
-            </li>
-            <li class='nav_item'>
-                <a href=''> 科研资讯
-                    <i class='nav_icon'></i>
-                </a>
-                <div class='item_content'>
-                    <a href='./pages/news1.html'>流通所新闻</a>
-                    <a href='./pages/news2.html'>基地资讯</a>
-                    <a href='./pages/news3.html'>媒体报道</a>
-                </div>
-            </li>
-            <li class='nav_item'>
-                <a href=''>科学研究
-                    <i class='nav_icon'></i>
-                </a>
-                <div class='item_content'>
-                    <a href='./pages/research1.html'>课题研究</a>
-                    <a href='./pages/research2.html'>课题招标</a>
-                    <a href='./pages/research3.html'>成果影响</a>
-                </div>
-            </li>
-            <li class='nav_item'>
-                <a href=''>科研成果
-                    <i class='nav_icon'></i>
-                </a>
-                <div class='item_content'>
-                    <a href='./pages/archi1.html'>学术论文</a>
-                    <a href='./pages/archi2.html'>著作</a>
-                    <a href='./pages/archi3.html'>研究报告</a>
-                </div>
-            </li>
-            <li class='nav_item'>
-                <a href=''>学术交流
-                    <i class='nav_icon'></i>
-                </a>
-                <div class='item_content'>
-                    <a href='./pages/academic1.html'>来访交流</a>
-                    <a href='./pages/academic2.html'>调研考察</a>
-                    <a href='./pages/academic3.html'>主办年会</a>
-                    <a href='academic4.html'>流通论坛</a>
-                </div>
-            </li>
-            <li class='nav_item'>
-                <a href=''>咨询培训
-                    <i class='nav_icon'></i>
-                </a>
-                <div class='item_content'>
-                    <a href='./pages/consult1.html'>咨询顾问</a>
-                    <a href='./pages/consult2.html'>企业策划</a>
-                    <a href='./pages/consult3.html'>专家培训</a>
-                </div>
-            </li>
-            <li class='nav_item'>
-                <a href=''>智库建设
-                    <i class='nav_icon'></i>
-                </a>
-                <div class='item_content'>
-                    <a href='./pages/construct1.html'>名家百人讲座</a>
-                    <a href='./pages/construct2.html'>智库动态</a>
-                </div>
-            </li>
-        </ul>
-    </header>
-    <div class="container">
+            <div class='item_content'>
+                <a href='./pages/ins1.html'>简介</a>
+                <a href='./pages/ins2.html'>机构设置</a>
+                <a href='./pages/ins3.html'>研究方向</a>
+                <a href='./pages/ins4.html'>专家团队</a>
+            </div>
+        </li>
+        <li class='nav_item'>
+            <a href=''> 科研资讯
+                <i class='nav_icon'></i>
+            </a>
+            <div class='item_content'>
+                <a href='./pages/news1.html'>流通所新闻</a>
+                <a href='./pages/news2.html'>基地资讯</a>
+                <a href='./pages/news3.html'>媒体报道</a>
+            </div>
+        </li>
+        <li class='nav_item'>
+            <a href=''>科学研究
+                <i class='nav_icon'></i>
+            </a>
+            <div class='item_content'>
+                <a href='./pages/research1.html'>课题研究</a>
+                <a href='./pages/research2.html'>课题招标</a>
+                <a href='./pages/research3.html'>成果影响</a>
+            </div>
+        </li>
+        <li class='nav_item'>
+            <a href=''>科研成果
+                <i class='nav_icon'></i>
+            </a>
+            <div class='item_content'>
+                <a href='./pages/archi1.html'>学术论文</a>
+                <a href='./pages/archi2.html'>著作</a>
+                <a href='./pages/archi3.html'>研究报告</a>
+            </div>
+        </li>
+        <li class='nav_item'>
+            <a href=''>学术交流
+                <i class='nav_icon'></i>
+            </a>
+            <div class='item_content'>
+                <a href='./pages/academic1.html'>来访交流</a>
+                <a href='./pages/academic2.html'>调研考察</a>
+                <a href='./pages/academic3.html'>主办年会</a>
+                <a href='academic4.html'>流通论坛</a>
+            </div>
+        </li>
+        <li class='nav_item'>
+            <a href=''>咨询培训
+                <i class='nav_icon'></i>
+            </a>
+            <div class='item_content'>
+                <a href='./pages/consult1.html'>咨询顾问</a>
+                <a href='./pages/consult2.html'>企业策划</a>
+                <a href='./pages/consult3.html'>专家培训</a>
+            </div>
+        </li>
+        <li class='nav_item'>
+            <a href=''>智库建设
+                <i class='nav_icon'></i>
+            </a>
+            <div class='item_content'>
+                <a href='./pages/construct1.html'>名家百人讲座</a>
+                <a href='./pages/construct2.html'>智库动态</a>
+            </div>
+        </li>
+    </ul>
+</header>
+<div class="container">
 
-        <div class="detail">
-            <div class="top">
-                <div class="top-img">
-                        <img src="../images/Ins_img_2.jpg" alt="">
-                </div>
-                <div class="cont">        
-                    <span class="name">阳明明</span>
-                    <span class="title">博士</span>
-                    <span class="job">
+    <div class="detail">
+        <div class="top">
+            <div class="top-img">
+                <img src="../images/Ins_img_2.jpg" alt="">
+            </div>
+            <div class="cont">
+                <span class="name">阳明明</span>
+                <span class="title">博士</span>
+                <span class="job">
                         广东财经大学工商管理学院教师<br>
                         管理科学与工程博士<br>
                         广州市现代物流与电子商务发展研究基地兼职研究员<br>
                     </span>
-               </div>
-              
-                
             </div>
 
-            <div class="main">
 
-                <p>
-                        1992年以来，先后接受新华社、人民日报、中国经营报、广东卫视、中国经济评论等境内外100多余家媒体的采访和报道。先后在《新华文摘》、《财贸经济》、《人民日报》、《南方日报》等报刊上发表论文400多篇，出版各类著作30余部，其中专著10多部，累计1000多万字。 获2010年中国餐饮科技进步奖二等奖，另有10多篇（部）在全国各类论文比赛中获奖。
-                </p>
+        </div>
 
-                <p>
-                        曾出版各类著作30余部：《市场进入战略》、《产业扩张》、《产业比较优势研究》、《国际游资大冲击》、《国际投机资本与金融动荡》、《住房革命》、《沃尔玛零售方法》、《零售企业员工培训》、《现代零售精要》、《广东与周边省区经济合作问题研究》、《现代资本运作》、《流通产业理论与实践》等。
-                </p>
+        <div class="main">
+            <strong>学历教育</strong>
+            <p>
+                1997-2001，兰州大学经济管理学院，获经济学学士学位，同时获法律学辅修学位
+            </p>
+            <p>
+                2002-2005，中山大学岭南学院,获经济学硕士学位
+            </p>
+            <p> 2007-2010，中山大学岭南学院，获管理学博士学位
+            </p>
 
-                <p>
-                        主编和参编著作10多部，主要有《金融市场学》、《中国上市公司板块分析》、《中国行业市场研究报告》、《中国品牌研究报告》等。
-                </p>
 
+            <strong>主讲课程 </strong>
+            <p> 供应链管理，采购管理，物流管理，港口物流管理
+            </p>
 
+            <strong>研究方向 </strong>
+            <p> 港口物流，物流管理，供应链管理
+            </p>
+
+            <strong>代表性科研成果 </strong>
+            <div>1、主持课题<br>
+                1. 阳明明.产业转移路径与交通枢纽物流量长期增长.中国物流学术前沿报告.2012.11<br>
+                2. 阳明明.一种预测交通枢纽物流量的新方法. 中国物流学术前沿报告.2011.11<br>
+                3. 阳明明.珠三角产业转移与广州港口经济发展新一轮契机，现代管理科学，2010.3<br>
+                4. 阳明明.核心企业激励节点企业信息化的方式及其比较，物流科技，2009.10<br>
+                5. 阳明明.香港的港口服务型供应链，中国物流与采购，2006.5<br>
+                6. 阳明明.物流成为“农改超”关键-对深圳市“农改超”调查的思考.中国物流与采购，2004.10<br>
+                7. 阳明明.CEPA环境下香港物流企业投资内地的战略选择，物流科技，2004.6<br>
+                8. 陈功玉，阳明明.论中国企业的供应链管理（第二作者），中山大学学报（社科版），2003.11<br>
             </div>
-        </div>  
-    </div>
-    <footer>
-        <div class='footer-box'>
-            <div class="footer-link">
-                <a href="#" target="_blank" title="意见反馈">意见反馈</a>
-                <a href="#" target="_blank" title="友情链接">友情链接</a>
-                <a href="#" target="_blank" title="友情链接">管理登录</a>
+            <br>
 
+            <strong>获奖情况
+            </strong>
+
+            <div>
+                2011年，论文“一种预测交通枢纽物流量的新方法”获“中国物流学术年会论文二等奖”；<br>
+                2012年，论文“产业转移路径与交通枢纽物流量长期增长”获“中国物流学术年会论文一等奖”；<br>
+
+                电子邮件：<br>
+                sunnyyang200209@yahoo.com.cn<br><br>
             </div>
-            <div class='footer-copyright'>
-                <div class='copyright-left'>
-                    <p>版权所有 Copyright© 2002-2017 维护建设:广东财经大学流通经济研究所</p>
-                    <p>广东财经大学流通经济研究所</p>
 
-                </div>
-                <div class='copyright-right'>
-                    <p>联系电话：020-84096050 84096319</p>
-                    <p> 传真号码：020-84096050</p>
-                </div>
+            <strong style="text-align: center;">最新著作： </strong><br>
+            <img src="../images/20160419115511304.jpg" alt="">
+            <div>
+                丛 书 名：现代物流与供应链管理丛书     总主编：彭雷清 <br>
+                作 　 者：阳明明        定 　 价：￥32          译 　 者：<br>
+                版 　 次：1-1        IS B N：978-7-5654-2279-9     开 　 本：16<br>
+                出版时间：2016-04-15     页 　 码： 144<br>
+                出版社：东北财经大学出版社<br>
             </div>
         </div>
-    </footer>
-    <!--回到顶部-->
-    <div id="goTop"></div>    
-    <script src="../js/goTop.js"></script>
+    </div>
+</div>
+<footer>
+    <div class='footer-box'>
+        <div class="footer-link">
+            <a href="#" target="_blank" title="意见反馈">意见反馈</a>
+            <a href="#" target="_blank" title="友情链接">友情链接</a>
+            <a href="#" target="_blank" title="友情链接">管理登录</a>
+
+        </div>
+        <div class='footer-copyright'>
+            <div class='copyright-left'>
+                <p>版权所有 Copyright© 2002-2017 维护建设:广东财经大学流通经济研究所</p>
+                <p>广东财经大学流通经济研究所</p>
+
+            </div>
+            <div class='copyright-right'>
+                <p>联系电话：020-84096050 84096319</p>
+                <p> 传真号码：020-84096050</p>
+            </div>
+        </div>
+    </div>
+</footer>
+<!--回到顶部-->
+<div id="goTop"></div>
+<script src="../js/goTop.js"></script>
 </body>
 
 </html>
