--- a/pages/academic2.html
+++ b/pages/academic2.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <div class='logo'>
+        <div class="header_banner">           <div class="banner_a">广州现代物流与电子商务发展研究基地</div>        </div>        <div class='logo'>
             <a href="../index.html">
                 <img src='../images/logo.png' alt="流通研究所" class='logo_img'> </a>
         </div>
@@ -27,10 +27,10 @@
                     <i class='nav_icon'></i>
                 </a>
                 <div class='item_content'>
-                    <a href='lns1.html'>简介</a>
-                    <a href='lns2.html'>机构设置</a>
-                    <a href='lns3.html'>研究方向</a>
-                    <a href='lns4.html'>专家团队</a>
+                    <a href='Ins1.html'>简介</a>
+                    <a href='Ins2.html'>机构设置</a>
+                    <a href='Ins3.html'>研究方向</a>
+                    <a href='Ins4.html'>专家团队</a>
                 </div>
             </li>
             <li class='nav_item'>
@@ -188,7 +188,28 @@
             </div>
         </div>
     </div>
-    <footer></footer>
+    <footer>
+        <div class='footer-box'>
+            <div class="footer-link">
+                <a href="#" target="_blank" title="意见反馈">意见反馈</a>
+                <a href="#" target="_blank" title="友情链接">友情链接</a>
+                <a href="#" target="_blank" title="友情链接">管理登录</a>
+
+            </div>
+            <div class='footer-copyright'>
+                <div class='copyright-left'>
+                    <p>版权所有 Copyright© 2002-2017 维护建设:广东财经大学流通经济研究所</p>
+                    <p>广东财经大学流通经济研究所</p>
+
+                </div>
+                <div class='copyright-right'>
+                    <p>联系电话：020-84096050 84096319</p>
+                    <p> 传真号码：020-84096050</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <script>
         /*分页组件初始化*/
         $('#box').paging({
