--- a/pages/academic4.html
+++ b/pages/academic4.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <div class='logo'>
+        <div class="header_banner">           <div class="banner_a">广州现代物流与电子商务发展研究基地</div>        </div>        <div class='logo'>
             <a href="../index.html">
                 <img src='../images/logo.png' alt="流通研究所" class='logo_img'> </a>
         </div>
@@ -27,10 +27,10 @@
                     <i class='nav_icon'></i>
                 </a>
                 <div class='item_content'>
-                    <a href='lns1.html'>简介</a>
-                    <a href='lns2.html'>机构设置</a>
-                    <a href='lns3.html'>研究方向</a>
-                    <a href='lns4.html'>专家团队</a>
+                    <a href='Ins1.html'>简介</a>
+                    <a href='Ins2.html'>机构设置</a>
+                    <a href='Ins3.html'>研究方向</a>
+                    <a href='Ins4.html'>专家团队</a>
                 </div>
             </li>
             <li class='nav_item'>
