--- a/pages/news1.html
+++ b/pages/news1.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <div class='logo'>
+        <div class="header_banner">           <div class="banner_a">广州现代物流与电子商务发展研究基地</div>        </div>        <div class='logo'>
             <a href="../index.html">
                 <img src='../images/logo.png' alt="流通研究所" class='logo_img'> </a>
         </div>
@@ -169,7 +169,7 @@
                                     <a href="../info/info-10.html">王先庆出席中国商业经济学会2017第一次副会长会议</a>
                                 </li>
                                 <li>
-                                    <a href="../info/info-1">广东省决策咨询研究基地“商贸物流与电子商务研究中心”获批
+                                    <a href="../info/info-1.html">广东省决策咨询研究基地“商贸物流与电子商务研究中心”获批
                                     </a>
                                 </li>
                                 <li>
