--- a/info/info-6.html
+++ b/info/info-6.html
@@ -24,10 +24,10 @@
                     <i class='nav_icon'></i>
                 </a>
                 <div class='item_content'>
-                    <a href='../pages/ins1.html'>简介</a>
-                    <a href='../pages/ins2.html'>机构设置</a>
-                    <a href='../pages/ins3.html'>研究方向</a>
-                    <a href='../pages/ins4.html'>专家团队</a>
+                    <a href='../pages/Ins1.html'>简介</a>
+                    <a href='../pages/Ins2.html'>机构设置</a>
+                    <a href='../pages/Ins3.html'>研究方向</a>
+                    <a href='../pages/Ins4.html'>专家团队</a>
                 </div>
             </li>
             <li class='nav_item'>
@@ -55,9 +55,9 @@
                     <i class='nav_icon'></i>
                 </a>
                 <div class='item_content'>
-                    <a href='../pages/archi11.html'>学术论文</a>
-                    <a href='../pages/archi12.html'>著作</a>
-                    <a href='../pages/archi13.html'>研究报告</a>
+                    <a href='../pages/archi1.html'>学术论文</a>
+                    <a href='../pages/archi2.html'>著作</a>
+                    <a href='../pages/archi3.html'>研究报告</a>
                 </div>
             </li>
             <li class='nav_item'>
