--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <script src='js/unslider.min.js'></script>
     <script src='js/index.js'></script>
     <script src='js/common.js'></script> 
-   
 
+   
+    <link rel="stylesheet" href="style/goTop.css">
     <link rel="stylesheet" href="style/common.min.css">
     <link rel="stylesheet" href="style/mixin.min.css">
     <link rel="stylesheet" href="style/index.min.css">
@@ -396,6 +397,9 @@
             </div>
         </div>
     </footer>
+
+    <div id="goTop"><span>回到顶部</span></div>
+    
 </body>
 
 </html>
