--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>lts</title>
     <script src="js/jquery-1.11.min.js"></script>
-    <script src='js/unslider.min.js'></script>
+    <script type="text/javascript" src="./js/slick.min.js"></script>
     <script src='js/index.js'></script>
     <script src='js/common.js'></script>
-
-
+    
+    <link rel="stylesheet" href="style/slick/slick.css">
+    <link rel="stylesheet" href="style/slick/slick-theme.css">
     <link rel="stylesheet" href="style/common.min.css">
     <link rel="stylesheet" href="style/mixin.min.css">
     <link rel="stylesheet" href="style/index.min.css">
+   
 </head>
 
 <body>
@@ -23,7 +25,7 @@
         <div class="banner_a">广州现代物流与电子商务发展研究基地</div>
     </div>
     <div class='header_nav'>
-        <div class='logo'>
+                 <div class='logo'>
             <a href="index.html">
                 <img src='./images/logo.png' alt="流通研究所" class='logo_img'> </a>
         </div>
@@ -54,7 +56,7 @@
                     <i class='nav_icon'></i>
                 </a>
                 <div class='item_content'>
-                    <a href='./pages/research1.html'>课题研究</a>
+                  <a href='./pages/research1.html'>课题研究</a>
                     <a href='./pages/research2.html'>课题招标</a>
                     <a href='./pages/research3.html'>成果影响</a>
                 </div>
@@ -104,32 +106,26 @@
   
 </header>
 <div class='container'>
-    <!-- <div class="carousel"> -->
     <!--轮播图部分-->
-    <section class="banner" id='banner'>
-        <ul>
-            <li>
+    <section class='container-types'>
+        <div class='banner'>
+            <a>
                 <img src="images/1.png" alt="1">
-            </li>
-            <li>
+            </a>
+            <a>
                 <img src="images/2.png" alt="2">
-            </li>
-            <li>
+            </a>
+            <a>
                 <img src="images/3.png" alt="3">
-            </li>
-            <li>
+            </a>
+            <a>
                 <img src="images/4.png" alt="4">
-            </li>
-            <li>
+            </a>
+            <a>
                 <img src="images/5.png" alt="5">
-            </li>
-        </ul>
-        <a href="javascript:void(0);" class="unslider-arrow04 prev">
-            <img class="arrow" id="al" src="images/arrowl.png" alt="prev" width="20" height="35">
-        </a>
-        <a href="javascript:void(0);" class="unslider-arrow04 next">
-            <img class="arrow" id="ar" src="images/arrowr.png" alt="next" width="20" height="37">
-        </a>
+            </a>
+        </div>
+       
     </section>
     <!--科研资讯-->
     <section class='info container-types'>
@@ -404,6 +400,8 @@
         </div>
     </div>
 </footer>
+
+
 </body>
 
 </html>
