--- a/info/person2.html
+++ b/info/person2.html
@@ -12,7 +12,7 @@
 
 <body>
 <header>
-    <div class="header_banner">           <div class="banner_a">广州现代物流与电子商务发展研究基地</div>        </div>        <div class='logo'>
+    <div class="header_banner">           <div class="banner_a">广州现代物流与电子商务发展研究基地</div>        </div>         <div class='header_nav'>         <div class='logo'>
         <a href="../index.html">
             <img src='../images/logo.png' alt="流通研究所" class='logo_img'>
         </a>
