--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src='js/index.js'></script>
     <script src='js/common.js'></script>
     
+
+    <link rel="stylesheet" href="style/goTop.css">
     <link rel="stylesheet" href="style/slick/slick.css">
     <link rel="stylesheet" href="style/slick/slick-theme.css">
     <link rel="stylesheet" href="style/common.min.css">
