--- a/pages/academic1.html
+++ b/pages/academic1.html
@@ -105,7 +105,7 @@
                         <img src="../images/academic1.png" alt="">
                     </div>
                     <div class="line">
-                        <a href="#">学术交流</a>
+                        <a href="#">学术术交流</a>
                     </div>
                 </div>
 
@@ -209,20 +209,20 @@
             </div>
         </div>
     </footer>
-    <script>
-        /*分页组件初始化*/
-        $('#box').paging({
-            initPageNo: 1, // 初始页码
-            totalPages: 5, //总页数
-            slideSpeed: 600, // 缓动速度。单位毫秒
-            jump: true, //是否支持跳转
-            totalCount: '14条数据',
-            // 条目总数
-            callback: function (page) { // 回调函数
-                console.log(page);
-            }
-        })
-    </script>
+        <script>
+            /*分页组件初始化*/
+            $('#box').paging({
+                initPageNo: 1, // 初始页码
+                totalPages: 5, //总页数
+                slideSpeed: 600, // 缓动速度。单位毫秒
+                jump: true, //是否支持跳转
+                totalCount: '14条数据',
+                // 条目总数
+                callback: function (page) { // 回调函数
+                    console.log(page);
+                }
+            })
+        </script>
 </body>
 
 </html>
