--- a/pages/construct1.html
+++ b/pages/construct1.html
@@ -100,13 +100,8 @@
         <div class='container-types'>
             <div class="boxLeft">
                 <!--左侧导航栏上面的装饰-->
-                <div class="navTop">
-                    <div class="image">
-                        <img src="../images/construct1.png" alt="">
-                    </div>
-                    <div class="line">
+                <div class="navTitle">
                         <a href="#">智库建设</a>
-                    </div>
                 </div>
 
                 <!--左侧导航栏-->
@@ -120,8 +115,21 @@
                 </ul>
 
                 <!--左侧导航栏下面的图片-->
-                <div class="navBottom">
-                    <img src="../images/construct2.png" alt="">
+                <div class='hotArticle'>
+                    <div class="navTitle ">
+                        近期热门文章
+                    </div>
+                    <ul class="hotBox">
+                        <li class="hot-Item">
+                            <a href="construct1.html">名家百人讲座</a>
+                        </li>
+                        <li class="hot-Item">
+                            <a href="construct2.html">智库动态</a>
+                        </li>
+                        <li class="hot-Item">
+                            <a href="construct2.html">智库动态</a>
+                        </li>
+                    </ul>
                 </div>
 
 
